--- a/Template0/index.html
+++ b/Template0/index.html
@@ -12,7 +12,7 @@
                 class="flex flex-row justify-between w-full p-4 bg-white text-center shadow-xl z-10"
             >
                 <img
-                    src="https://cdn.discordapp.com/attachments/795539630075478528/795539662885056000/unknown.png"
+                    src="https://placekitten.com/600/200"
                     class="flex w-20 h-20 justify-center items-center pl-32"
                     alt="Logo"
                 />
@@ -97,7 +97,9 @@
                 <div
                     class="w-full grid grid-cols-2 gap-32 text-center mt-8 px-8"
                 >
-                    <div class="flex flex-col shadow-xl">
+                    <div
+                        class="flex flex-col shadow-xl hover:scale-105 duration-500 hover:scale-105 duration-500"
+                    >
                         <img
                             src="https://placekitten.com/600/200"
                             alt="Kitten"
@@ -115,7 +117,9 @@
                             </p>
                         </div>
                     </div>
-                    <div class="flex flex-col shadow-xl">
+                    <div
+                        class="flex flex-col shadow-xl hover:scale-105 duration-500"
+                    >
                         <img
                             src="https://placekitten.com/600/200"
                             alt="Kitten"
@@ -138,7 +142,9 @@
                 <div
                     class="w-full grid grid-cols-4 gap-8 text-center mt-8 px-8 pb-10"
                 >
-                    <div class="flex flex-col shadow-xl">
+                    <div
+                        class="flex flex-col shadow-xl hover:scale-105 duration-500"
+                    >
                         <img
                             src="https://placekitten.com/600/200"
                             alt="Kitten"
@@ -156,7 +162,9 @@
                             </p>
                         </div>
                     </div>
-                    <div class="flex flex-col shadow-xl">
+                    <div
+                        class="flex flex-col shadow-xl hover:scale-105 duration-500"
+                    >
                         <img
                             src="https://placekitten.com/600/200"
                             alt="Kitten"
@@ -174,7 +182,9 @@
                             </p>
                         </div>
                     </div>
-                    <div class="flex flex-col shadow-xl">
+                    <div
+                        class="flex flex-col shadow-xl hover:scale-105 duration-500"
+                    >
                         <img
                             src="https://placekitten.com/600/200"
                             alt="Kitten"
@@ -192,7 +202,9 @@
                             </p>
                         </div>
                     </div>
-                    <div class="flex flex-col shadow-xl">
+                    <div
+                        class="flex flex-col shadow-xl hover:scale-105 duration-500"
+                    >
                         <img
                             src="https://placekitten.com/600/200"
                             alt="Kitten"
