--- a/Template0/index.html
+++ b/Template0/index.html
@@ -5,6 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="./styles.css" />
+
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="./cssmap-europe/cssmap-europe.css"
+            media="screen"
+        />
     </head>
     <body>
         <div class="flex flex-col">
@@ -12,8 +19,8 @@
                 class="flex flex-row justify-between w-full p-4 bg-white text-center shadow-xl z-10"
             >
                 <img
-                    src="https://placekitten.com/600/200"
-                    class="flex w-20 h-20 justify-center items-center pl-32"
+                    src=""
+                    class="flex w-32 h-20 items-center justify-center text-center bg-gray-600"
                     alt="Logo"
                 />
                 <div class="flex flex-row pr-20">
@@ -225,17 +232,191 @@
                 </div>
             </div>
             <div
-                class="flex flex-col w-full bg-white pb-96 justify-center items-center"
+                class="flex flex-col w-full bg-white justify-center items-center shadow-xl z-10 pt-8 pb-32"
             >
-                <h1 class="flex text-6xl text-left font-normal pb-8 py-12">
+                <h1 class="flex text-6xl text-left font-normal py-4">
                     Where we operate
                 </h1>
-                <img
-                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/Map_of_USA_States_with_names_white.svg/800px-Map_of_USA_States_with_names_white.svg.png"
-                    class="flex w-1/2 h-1/2 justify-center items-center"
-                    alt="Map"
-                />
+                <div class="flex flex-row justify-around w-full h-full">
+                    <ul class="flex flex-col justify-around">
+                        <li class="text-6xl">Germany</li>
+                        <li class="text-6xl">France</li>
+                        <li class="text-6xl">Italy</li>
+                        <li class="text-6xl">Finland</li>
+                        <li class="text-6xl">England</li>
+                    </ul>
+                    <div id="map-europe" class="flex m-0">
+                        <ul class="europe mt-12">
+                            <li class="eu1">
+                                <a href="#albania">Albania</a>
+                            </li>
+                            <li class="eu2"><a href="#andorra">Andorra</a></li>
+                            <li class="eu3"><a href="#austria">Austria</a></li>
+                            <li class="eu4"><a href="#belarus">Belarus</a></li>
+                            <li class="eu5"><a href="#belgium">Belgium</a></li>
+                            <li class="eu6">
+                                <a href="#bosnia-and-herzegovina"
+                                    >Bosnia and Herzegovina</a
+                                >
+                            </li>
+                            <li class="eu7">
+                                <a href="#bulgaria">Bulgaria</a>
+                            </li>
+                            <li class="eu8"><a href="#croatia">Croatia</a></li>
+                            <li class="eu9"><a href="#cyprus">Cyprus</a></li>
+                            <li class="eu10">
+                                <a href="#czech-republic">Czech Republic</a>
+                            </li>
+                            <li class="eu11"><a href="#denmark">Denmark</a></li>
+                            <li class="eu12"><a href="#estonia">Estonia</a></li>
+                            <li class="eu13"><a href="#france">France</a></li>
+                            <li class="eu14"><a href="#finland">Finland</a></li>
+                            <li class="eu15"><a href="#georgia">Georgia</a></li>
+                            <li class="eu16"><a href="#germany">Germany</a></li>
+                            <li class="eu17"><a href="#greece">Greece</a></li>
+                            <li class="eu18"><a href="#hungary">Hungary</a></li>
+                            <li class="eu19"><a href="#iceland">Iceland</a></li>
+                            <li class="eu20"><a href="#ireland">Ireland</a></li>
+                            <li class="eu21">
+                                <a href="#san-marino">San Marino</a>
+                            </li>
+                            <li class="eu22"><a href="#italy">Italy</a></li>
+                            <li class="eu23"><a href="#kosovo">Kosovo</a></li>
+                            <li class="eu24"><a href="#latvia">Latvia</a></li>
+                            <li class="eu25">
+                                <a href="#liechtenstein">Liechtenstein</a>
+                            </li>
+                            <li class="eu26">
+                                <a href="#lithuania">Lithuania</a>
+                            </li>
+                            <li class="eu27">
+                                <a href="#luxembourg">Luxembourg</a>
+                            </li>
+                            <li class="eu28">
+                                <a href="#macedonia"
+                                    >Macedonia
+                                    <abbr
+                                        title="The Former Yugoslav Republic of Macedonia"
+                                        >(F.Y.R.O.M.)</abbr
+                                    ></a
+                                >
+                            </li>
+                            <li class="eu29"><a href="#malta">Malta</a></li>
+                            <li class="eu30"><a href="#moldova">Moldova</a></li>
+                            <li class="eu31"><a href="#monaco">Monaco</a></li>
+                            <li class="eu32">
+                                <a href="#montenegro">Montenegro</a>
+                            </li>
+                            <li class="eu33">
+                                <a href="#netherlands">Netherlands</a>
+                            </li>
+                            <li class="eu34"><a href="#norway">Norway</a></li>
+                            <li class="eu35"><a href="#poland">Poland</a></li>
+                            <li class="eu36">
+                                <a href="#portugal">Portugal</a>
+                            </li>
+                            <li class="eu37"><a href="#romania">Romania</a></li>
+                            <li class="eu38">
+                                <a href="#russian-federation"
+                                    >Russian Federation</a
+                                >
+                            </li>
+                            <li class="eu39"><a href="#serbia">Serbia</a></li>
+                            <li class="eu40">
+                                <a href="#slovakia">Slovakia</a>
+                            </li>
+                            <li class="eu41">
+                                <a href="#slovenia">Slovenia</a>
+                            </li>
+                            <li class="eu42"><a href="#spain">Spain</a></li>
+                            <li class="eu43"><a href="#sweden">Sweden</a></li>
+                            <li class="eu44">
+                                <a href="#switzerland">Switzerland</a>
+                            </li>
+                            <li class="eu45"><a href="#turkey">Turkey</a></li>
+                            <li class="eu46"><a href="#ukraine">Ukraine</a></li>
+                            <li class="eu47">
+                                <a href="#united-kingdom">United Kingdom</a>
+                            </li>
+                            <!-- 
+                     <li class="eu48"><a href="#england">England</a></li>
+                     <li class="eu49"><a href="#isle-of-man">Isle of Man</a></li>
+                     <li class="eu50"><a href="#northern-ireland">Northern Ireland</a></li>
+                     <li class="eu51"><a href="#scotland">Scotland</a></li>
+                     <li class="eu52"><a href="#wales">Wales</a></li>
+                   -->
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="w-full p-4 py-32 bg-slate-300 text-center shadow-xl">
+                <h1 class="text-6xl pb-8">Contact Us</h1>
+                <div class="flex flex-row justify-center">
+                    <!-- <div class="grid grid-cols-3 gap-64"> -->
+                    <div
+                        class="flex flex-col w-96 h-64 bg-white rounded-lg p-8 text-left shadow-xl m-8"
+                    >
+                        <h3 class="text-2xl font-bold py-4">Hours</h3>
+                        <p class="text-xl break-words">
+                            1234 Main Street, Suite 1234, Miami, FL 33101
+                        </p>
+                    </div>
+                    <div
+                        class="flex flex-col w-96 h-64 bg-white rounded-lg p-8 text-left shadow-xl m-8"
+                    >
+                        <h3 class="text-2xl font-bold py-4">Address</h3>
+                        <p class="text-xl break-words">N/A</p>
+                    </div>
+                    <div
+                        class="flex flex-col w-96 h-64 bg-white rounded-lg p-8 text-left shadow-xl m-8"
+                    >
+                        <h3 class="text-2xl font-bold py-4">Email</h3>
+                        <p class="text-xl break-words">N/A</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex flex-col w-full bg-slate-200 pb-96">
+                <h1
+                    class="flex justify-center text-6xl text-center font-normal pt-32"
+                >
+                    Our Work
+                </h1>
+                <h3>
+                    <p
+                        class="flex justify-center text-2xl text-center text-gray-600 font-normal pt-8 px-64"
+                    >
+                        We have worked with a variety of types of commercial
+                        buildings, including gas stations, super markets,
+                        churches, etc. Checkout our gallery below!
+                    </p>
+                </h3>
+                <p>qitu posht do foto interesant me ni grid tfort</p>
             </div>
         </div>
+        <script src="./script.js"></script>
+
+        <script
+            type="text/javascript"
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        ></script>
+
+        <script
+            type="text/javascript"
+            src="https://cssmapsplugin.com/5/jquery.cssmap.min.js"
+        ></script>
+
+        <script type="text/javascript">
+            $(document).ready(function () {
+                // CSSMap;
+                $("#map-europe").CSSMap({
+                    size: 850,
+                    tooltips: "floating-top-right",
+                    responsive: "auto",
+                    disableClicks: true,
+                    activateOnLoad: ["eu13", "eu14", "eu16", "eu22", "eu47"],
+                });
+                // END OF THE CSSMap;
+            });
+        </script>
     </body>
 </html>
