--- a/Template0Prap/index.html
+++ b/Template0Prap/index.html
@@ -16,7 +16,7 @@
     <body>
         <div class="flex flex-col">
             <header
-                class="flex flex-row p-4 sm:justify-between w-full bg-white text-center shadow-xl px-12 lg:px-32 z-10"
+                class="flex flex-row p-4 sm:justify-between w-full bg-white text-center shadow-xl px-12 lg:px-32 z-10 sticky top-0 sm:relative"
             >
                 <div><img src="./images/logo.png" alt="logo" /></div>
                 <div class="flex hamburger-menu">
@@ -123,7 +123,171 @@
                     </div>
                 </div>
             </content>
-            <div></div>
+            <div>
+                <div class="flex flex-col justify-center items-center">
+                    <h1 class="text-4xl font-semibold py-8 lg:text-6xl">
+                        Our Services
+                    </h1>
+                    <h2
+                        class="text-xl font-normal text-center px-12 pb-8 text-zinc-700 lg:px-32 lg:text-3xl"
+                    >
+                        Glass & Glazing is a family-owned business, operating
+                        out of South Florida. In our years of operation, we have
+                        provided quality services to our customers, and we pride
+                        ourselves on dependability, productivity, and
+                        professionalism as we provide our services to our
+                        customers.
+                    </h2>
+                    <h3
+                        class="text-xl font-normal text-center px-12 pb-8 text-zinc-700 lg:text-2xl"
+                    >
+                        We do both commercial and residential buildings.
+                    </h3>
+                </div>
+                <div
+                    class="flex flex-col w-screen px-12 items-center md:flex-row md:justify-between lg:px-32 py-8"
+                >
+                    <div
+                        class="flex flex-col w-full rounded-b-lg shadow-xl hover:scale-105 duration-500 w-5/6 mb-8 md:w-4/6 md:mx-12"
+                    >
+                        <img
+                            src="https://placekitten.com/600/200"
+                            alt="Kitten"
+                            class="bg-cover w-full rounded-t-lg"
+                        />
+                        <div class="bg-white rounded-b-lg">
+                            <p
+                                class="text-center text-3xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
+                            >
+                                Example Project
+                            </p>
+                            <p
+                                class="rounded-b-lg text-lg text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
+                            >
+                                Glass & Glazing is a family-owned business,
+                                operating out of South Florida.
+                            </p>
+                        </div>
+                    </div>
+                    <div
+                        class="flex flex-col w-full rounded-b-lg shadow-xl hover:scale-105 duration-500 w-5/6 mb-8 md:w-4/6 md:mx-12"
+                    >
+                        <img
+                            src="https://placekitten.com/600/200"
+                            alt="Kitten"
+                            class="bg-cover w-full rounded-t-lg"
+                        />
+                        <div class="bg-white rounded-b-lg">
+                            <h2
+                                class="rounded-b-lg text-3xl font-normal p-2 text-center sm:text-left lg:text-4xl lg:p-4"
+                            >
+                                Example Project
+                            </h2>
+                            <p
+                                class="rounded-b-lg text-lg text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
+                            >
+                                Glass & Glazing is a family-owned business,
+                                operating out of South Florida.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- qitash duhet me jau ndreq design ktyne masi tbohen te kapercejn md:, dmth fotot qe duhet mu kon 4 ne row duhet heigh edhe width edhe padding me ndrru -->
+                <div class="flex flex-col md:flex-row">
+                    <div
+                        class="flex flex-row w-screen justify-center px-12 md:flex-row md:justify-between lg:px-32 pb-8"
+                    >
+                        <div
+                            class="flex flex-col w-full h-fit rounded-b-lg shadow-xl hover:scale-105 duration-500 w-5/12 mb-8 mr-4 md:w-4/6 md:mx-12"
+                        >
+                            <img
+                                src="https://placekitten.com/400/600"
+                                alt="Kitten"
+                                class="bg-cover w-full rounded-t-lg"
+                            />
+                            <div class="bg-white rounded-b-lg">
+                                <p
+                                    class="text-center text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
+                                >
+                                    Example Project
+                                </p>
+                                <p
+                                    class="rounded-b-lg text-md text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
+                                >
+                                    Glass & Glazing is a family-owned business.
+                                </p>
+                            </div>
+                        </div>
+                        <div
+                            class="flex flex-col w-full h-fit rounded-b-lg shadow-xl hover:scale-105 duration-500 w-5/12 mb-8 md:w-4/6 md:mx-12"
+                        >
+                            <img
+                                src="https://placekitten.com/400/600"
+                                alt="Kitten"
+                                class="bg-cover w-full rounded-t-lg"
+                            />
+                            <div class="bg-white rounded-b-lg">
+                                <p
+                                    class="text-center text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
+                                >
+                                    Example Project
+                                </p>
+                                <p
+                                    class="rounded-b-lg text-md text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
+                                >
+                                    Glass & Glazing is a family-owned business.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="flex flex-row w-screen justify-center px-12 md:flex-row md:justify-between lg:px-32 pb-8"
+                    >
+                        <div
+                            class="flex flex-col w-full h-fit rounded-b-lg shadow-xl hover:scale-105 duration-500 w-5/12 mb-8 mr-4 md:w-4/6 md:mx-12"
+                        >
+                            <img
+                                src="https://placekitten.com/400/600"
+                                alt="Kitten"
+                                class="bg-cover w-full rounded-t-lg"
+                            />
+                            <div class="bg-white rounded-b-lg">
+                                <p
+                                    class="text-center text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
+                                >
+                                    Example Project
+                                </p>
+                                <p
+                                    class="rounded-b-lg text-md text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
+                                >
+                                    Glass & Glazing is a family-owned business.
+                                </p>
+                            </div>
+                        </div>
+                        <div
+                            class="flex flex-col w-full h-fit rounded-b-lg shadow-xl hover:scale-105 duration-500 w-5/12 mb-8 md:w-4/6 md:mx-12"
+                        >
+                            <img
+                                src="https://placekitten.com/400/600"
+                                alt="Kitten"
+                                class="bg-cover w-full rounded-t-lg"
+                            />
+                            <div class="bg-white rounded-b-lg">
+                                <p
+                                    class="text-center text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
+                                >
+                                    Example Project
+                                </p>
+                                <p
+                                    class="rounded-b-lg text-md text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
+                                >
+                                    Glass & Glazing is a family-owned business.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
