better responsivness and text formatted

--- a/Template0Prap/index.html
+++ b/Template0Prap/index.html
@@ -138,13 +138,13 @@
                         </h1>
                     </div>
                     <div class="flex flex-col px-12 pb-12 lg:px-32 md:pb-32">
-                        <h2 class="flex text-2xl sm:text-3xl text-left">
+                        <h2 class="flex text-xl sm:text-3xl text-left">
                             Our company believes in the core values of customer
                             satisfaction, dependability and integrity, as these
                             values shape our employees and the quality of our
                             work.
                         </h2>
-                        <h3 class="flex text-2xl text-white text-left mt-5">
+                        <h3 class="flex text-lg text-white text-left mt-5">
                             <a
                                 href="#"
                                 class="bg-gray-600 p-4 rounded-lg shadow-xl hover:bg-white hover:text-black hover:border-2 hover:border-gray-600 duration-500"
@@ -168,12 +168,12 @@
             <section id="section2">
                 <div class="flex flex-col justify-center items-center">
                     <h1
-                        class="text-5xl font-semibold py-8 md:text-6xl lg:text-7xl"
+                        class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-semibold py-8"
                     >
                         Our Services
                     </h1>
                     <h2
-                        class="text-xl font-normal text-center px-12 pb-8 text-zinc-700 md:text-2xl lg:px-32 lg:text-3xl"
+                        class="text-xl md:text-2xl lg:text-3xl font-normal text-center px-12 pb-8 text-zinc-700 lg:px-32"
                     >
                         Glass & Glazing is a family-owned business, operating
                         out of South Florida. In our years of operation, we have
@@ -201,12 +201,12 @@
                         />
                         <div class="bg-white rounded-b-lg">
                             <p
-                                class="text-center text-3xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
+                                class="text-center text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
                             >
                                 Example Project
                             </p>
                             <p
-                                class="rounded-b-lg text-lg text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
+                                class="rounded-b-lg text-md text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
                             >
                                 Glass & Glazing is a family-owned business,
                                 operating out of South Florida.
@@ -223,12 +223,12 @@
                         />
                         <div class="bg-white rounded-b-lg">
                             <h2
-                                class="rounded-b-lg text-3xl font-normal p-2 text-center sm:text-left lg:text-4xl lg:p-4"
+                                class="rounded-b-lg text-2xl font-normal p-2 text-center sm:text-left lg:text-4xl lg:p-4"
                             >
                                 Example Project
                             </h2>
                             <p
-                                class="rounded-b-lg text-lg text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
+                                class="rounded-b-lg text-md sm:text-lg text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
                             >
                                 Glass & Glazing is a family-owned business,
                                 operating out of South Florida.
@@ -236,7 +236,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- qitash duhet me jau ndreq design ktyne masi tbohen te kapercejn md:, dmth fotot qe duhet mu kon 4 ne row duhet heigh edhe width edhe padding me ndrru -->
                 <div
                     class="flex flex-col md:flex-row md:justify-around md:px-12 lg:px-32"
                 >
@@ -253,12 +252,12 @@
                             />
                             <div class="bg-white rounded-b-lg">
                                 <p
-                                    class="text-center text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
+                                    class="text-center text-lg sm:text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
                                 >
                                     Example Project
                                 </p>
                                 <p
-                                    class="rounded-b-lg text-md text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl l"
+                                    class="rounded-b-lg text-sm sm:text-lg text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl l"
                                 >
                                     Glass & Glazing is a family-owned business.
                                 </p>
@@ -274,12 +273,12 @@
                             />
                             <div class="bg-white rounded-b-lg">
                                 <p
-                                    class="text-center text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
+                                    class="text-center text-lg sm:text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
                                 >
                                     Example Project
                                 </p>
                                 <p
-                                    class="rounded-b-lg text-md text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
+                                    class="rounded-b-lg text-sm sm:text-lg text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl l"
                                 >
                                     Glass & Glazing is a family-owned business.
                                 </p>
@@ -299,12 +298,12 @@
                             />
                             <div class="bg-white rounded-b-lg">
                                 <p
-                                    class="text-center text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
+                                    class="text-center text-lg sm:text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
                                 >
                                     Example Project
                                 </p>
                                 <p
-                                    class="rounded-b-lg text-md text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl l"
+                                    class="rounded-b-lg text-sm sm:text-lg text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl l"
                                 >
                                     Glass & Glazing is a family-owned business.
                                 </p>
@@ -320,12 +319,12 @@
                             />
                             <div class="bg-white rounded-b-lg">
                                 <p
-                                    class="text-center text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
+                                    class="text-center text-lg sm:text-2xl font-normal p-2 sm:text-left lg:text-4xl lg:p-4"
                                 >
                                     Example Project
                                 </p>
                                 <p
-                                    class="rounded-b-lg text-md text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl lg:p-4"
+                                    class="rounded-b-lg text-sm sm:text-lg text-gray-600 font-normal p-2 text-center sm:text-left lg:text-2xl l"
                                 >
                                     Glass & Glazing is a family-owned business.
                                 </p>
@@ -338,13 +337,17 @@
                 id="section3"
                 class="flex flex-col justify-center sm:justify-around items-center bg-slate-300 pb-12"
             >
-                <p class="text-5xl font-semibold py-12 md:text-6xl lg:text-7xl">
+                <p
+                    class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-semibold py-12 md:text-6xl lg:text-7xl"
+                >
                     Where We Operate
                 </p>
                 <div
-                    class="flex flex-row justify-around w-max h-full sm:px-12 sm:w-full sm:justify-around md:px-24 md:justify-between"
+                    class="flex flex-col sm:flex-row justify-around w-max h-full sm:px-12 sm:w-full sm:justify-around md:px-24 md:justify-between"
                 >
-                    <ul class="flex flex-col justify-between sm:py-24">
+                    <ul
+                        class="flex flex-row justify-around w-screen sm:flex-col sm:py-auto md:w-fit"
+                    >
                         <li class="text-2xl sm:text-3xl">Germany</li>
                         <li class="text-2xl sm:text-3xl">France</li>
                         <li class="text-2xl sm:text-3xl">Italy</li>
@@ -518,13 +521,13 @@
                 class="flex flex-col justify-center items-center w-full py-12 bg-slate-700"
             >
                 <h1
-                    class="text-5xl font-semibold py-12 md:text-6xl lg:text-7xl"
+                    class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-semibold py-12 md:text-6xl lg:text-7xl"
                 >
                     Contact Us
                 </h1>
                 <div class="flex flex-col lg:flex-row">
                     <div
-                        class="flex flex-col w-96 h-64 bg-white rounded-lg p-8 text-left shadow-xl m-8 hover:scale-105 duration-500"
+                        class="flex flex-col w-64 md:w-96 h-64 bg-white rounded-lg p-8 text-left shadow-xl m-8 hover:scale-105 duration-500"
                     >
                         <h2 class="text-2xl font-bold py-4">Hours</h2>
                         <p class="text-xl break-words">
@@ -532,13 +535,13 @@
                         </p>
                     </div>
                     <div
-                        class="flex flex-col w-96 h-64 bg-white rounded-lg p-8 text-left shadow-xl m-8 hover:scale-105 duration-500"
+                        class="flex flex-col w-64 md:w-96 h-64 bg-white rounded-lg p-8 text-left shadow-xl m-8 hover:scale-105 duration-500"
                     >
                         <h2 class="text-2xl font-bold py-4">Address</h2>
                         <p class="text-xl break-words">N/A</p>
                     </div>
                     <div
-                        class="flex flex-col w-96 h-64 bg-white rounded-lg p-8 text-left shadow-xl m-8 hover:scale-105 duration-500"
+                        class="flex flex-col w-64 md:w-96 h-64 bg-white rounded-lg p-8 text-left shadow-xl m-8 hover:scale-105 duration-500"
                     >
                         <h2 class="text-2xl font-bold py-4">Email</h2>
                         <p class="text-xl break-words">N/A</p>
@@ -551,13 +554,13 @@
                 class="flex flex-col w-full bg-slate-200 pb-20"
             >
                 <h1
-                    class="flex justify-center text-6xl text-center font-normal pt-12"
+                    class="flex justify-center text-3xl sm:text-4xl md:text-5xl lg:text-6xl text-center font-normal pt-12"
                 >
                     Our Work
                 </h1>
                 <h2>
                     <p
-                        class="flex justify-center px-12 text-2xl text-center text-gray-600 font-normal pt-8 md:px-32 pb-12"
+                        class="flex justify-center px-12 text-xl md:text-2xl lg:text-3xl text-center text-gray-600 font-normal pt-8 md:px-32 pb-12"
                     >
                         We have worked with a variety of types of commercial
                         buildings, including gas stations, super markets,
@@ -784,64 +787,6 @@
                             <h2
                                 class="mb-3 text-sm font-medium tracking-widest text-gray-900 uppercase title-font"
                             >
-                                Support
-                            </h2>
-                            <nav class="mb-10 list-none">
-                                <ul>
-                                    <li class="mt-3">
-                                        <a
-                                            class="text-gray-500 cursor-pointer hover:text-gray-900"
-                                            >Contact Support</a
-                                        >
-                                    </li>
-                                    <li class="mt-3">
-                                        <a
-                                            class="text-gray-500 cursor-pointer hover:text-gray-900"
-                                            >Help Resources</a
-                                        >
-                                    </li>
-                                    <li class="mt-3">
-                                        <a
-                                            class="text-gray-500 cursor-pointer hover:text-gray-900"
-                                            >Release Updates</a
-                                        >
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                        <div class="w-full px-4 lg:w-1/4 md:w-1/2">
-                            <h2
-                                class="mb-3 text-sm font-medium tracking-widest text-gray-900 uppercase title-font"
-                            >
-                                Platform
-                            </h2>
-                            <nav class="mb-10 list-none">
-                                <ul>
-                                    <li class="mt-3">
-                                        <a
-                                            class="text-gray-500 cursor-pointer hover:text-gray-900"
-                                            >Terms &amp; Privacy</a
-                                        >
-                                    </li>
-                                    <li class="mt-3">
-                                        <a
-                                            class="text-gray-500 cursor-pointer hover:text-gray-900"
-                                            >Pricing</a
-                                        >
-                                    </li>
-                                    <li class="mt-3">
-                                        <a
-                                            class="text-gray-500 cursor-pointer hover:text-gray-900"
-                                            >FAQ</a
-                                        >
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                        <div class="w-full px-4 lg:w-1/4 md:w-1/2">
-                            <h2
-                                class="mb-3 text-sm font-medium tracking-widest text-gray-900 uppercase title-font"
-                            >
                                 Contact
                             </h2>
                             <nav class="mb-10 list-none">
@@ -893,7 +838,7 @@
         ></script>
 
         <script type="text/javascript">
-            $(document).ready(function() {
+            $(document).ready(function () {
                 // CSSMap;
                 $("#map-europe").CSSMap({
                     size: 850,
@@ -907,15 +852,14 @@
         </script>
 
         <script>
-            document.addEventListener("DOMContentLoaded", function() {
+            document.addEventListener("DOMContentLoaded", function () {
                 // Get all header links with data-scroll-to attribute
-                const headerLinks = document.querySelectorAll(
-                    "a[data-scroll-to]"
-                );
+                const headerLinks =
+                    document.querySelectorAll("a[data-scroll-to]");
 
                 // Add click event listeners to each link
                 headerLinks.forEach((link) => {
-                    link.addEventListener("click", function(e) {
+                    link.addEventListener("click", function (e) {
                         e.preventDefault();
 
                         const targetId = this.getAttribute("data-scroll-to");
@@ -938,13 +882,13 @@
             if ("serviceWorker" in navigator) {
                 navigator.serviceWorker
                     .register("/service-worker.js")
-                    .then(function(registration) {
+                    .then(function (registration) {
                         console.log(
                             "Service Worker registered with scope:",
                             registration.scope
                         );
                     })
-                    .catch(function(error) {
+                    .catch(function (error) {
                         console.error(
                             "Service Worker registration failed:",
                             error
